--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "express": "^4.17.21"
   },
   "devDependencies": {
-    "@types/clean-css": "^4.2.11",
     "@types/express": "^4.17.21",
     "@types/react-dom": "^18.2.19",
-    "clean-css": "^5.3.3",
+    "diffable-html": "^5.0.0",
+    "html-prettify": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "terser": "^5.29.2",
     "ts-node": "^10.9.2"
   }
 }
