--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "aria-periodic",
+  "name": "aria-reference-guide",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node ./src/app.tsx",
     "test-webkit": "npx playwright wk http://localhost:10101"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Michael Puckett <michael@puckett.contact>",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.17.21"
+    "express": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/react-dom": "^18.2.19",
-    "diffable-html": "^5.0.0",
-    "html-prettify": "^1.0.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "ts-node": "^10.9.2"
   }
 }
