--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "outDir": "./"
   },
   "exclude": ["../../node_modules"],
-  "include": ["src/**/*", "styles/colors.css.ts"]
+  "include": ["data/**/*", "src/**/*", "styles/colors.css.ts"]
 }
